--- a/ai-exam-prep/package.json
+++ b/ai-exam-prep/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/pg": "^8.10.9",
     "bcryptjs": "^2.4.3",
-    "jose": "^6.0.12",
+    "dotenv": "^17.2.1",
+    "jose": "^5.x.x",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.5",
+    "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
