--- a/ai-exam-prep/package.json
+++ b/ai-exam-prep/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "jest --runInBand",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
