--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
 {
   "version": 2,
-  "buildCommand": "cd ai-exam-prep && npm run build",
-  "outputDirectory": "ai-exam-prep/.next",
-  "installCommand": "cd ai-exam-prep && npm install",
-  "framework": "nextjs",
+  "builds": [
+    {
+      "src": "ai-exam-prep/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "ai-exam-prep/$1"
+    }
+  ],
   "functions": {
     "ai-exam-prep/src/app/api/**/*.ts": {
       "maxDuration": 30
